4522.	[bug]		Handle big gaps in log file version numbers better.
			[RT #38688]

4521.	[cleanup]	Log it as an error if an entropy source is not
			found and there is no fallback available. [RT #43659]

4520.	[cleanup]	Alphabetise more of the grammar when printing it
			out. Fix unbalanced indenting. [RT #43755]

4519.	[port]		win32: handle ERROR_MORE_DATA. [RT #43534]

4516.	[bug]		isc_socketmgr_renderjson was missing from the
			windows build. [RT #43602]

4515.	[port]		FreeBSD: Find readline headers when they are in
			edit/readline/ instead of readline/. [RT #43658]

4514.	[port]		NetBSD: strip -WL, from ld command line. [RT #43204]

4513.	[cleanup]	Minimum Python versions are now 2.7 and 3.2.
			[RT #43566]

4512.	[bug]		win32: @GEOIP_INC@ missing from delv.vcxproj.in.
			[RT #43556]

4511.	[bug]		win32: mdig.exe-BNFT was missing Configure. [RT #43554]

4509.	[test]		Make the rrl system test more reliable on slower
			machines by using mdig instead of dig. [RT #43280]

4507.	[bug]		Named could incorrectly log 'allows updates by IP
			address, which is insecure' [RT #43432]

4505.	[port]		Use IP_PMTUDISC_OMIT if available. [RT #35494]

4504.	[security]	Allow the maximum number of records in a zone to
			be specified.  This provides a control for issues
			raised in CVE-2016-6170. [RT #42143]

4503.	[cleanup]	"make uninstall" now removes files installed by
			BIND. (This currently excludes Python files
			due to lack of support in setup.py.) [RT #42912]

4502.	[func]		Report multiple and experimental options when printing
			grammar. [RT #43134]

4500.	[bug]		Support modifier I64 in isc__print_printf. [RT #43526]

4499.	[port]		MacOSX: silence deprecated function warning
			by using arc4random_stir() when available
			instead of arc4random_addrandom(). [RT #43503]

4498.	[test]		Simplify prerequisite checks in system tests.
			[RT #43516]

4497.	[port]		Add support for OpenSSL 1.1.0. [RT #41284]

4496.	[func]		dig: add +idnout to control whether labels are